# planets

./: .gitignore  Cargo.toml  flake.nix  todo.md
assets/: flat_normal_material.wgsl
src/: camera.rs  chunk_storage.rs  chunking.rs  colors.rs  fibonacci_sphere.rs  fibonacci_sphere_visualiser.rs  flatnormal.rs  geometry_data.rs  goldberg.rs  helpers.rs  icosahedron.rs  main.rs  octree.rs  surface.rs
