[package]
name = "planets"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = ["dynamic_linking"] }
bevy-fps-counter = "0.6.0"
bevy_panorbit_camera = "0.22.0"
crossbeam = "0.8.4"
noisy_bevy = "0.8.0"
rand = "0.9.0"
rayon = "1.10.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
